adding exclamation point

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <p>
     this is edited in "minor" branch
   </p>
-  <p>edited in "major" branch</p>
+  <p>edited in "major" branch !</p>
 </body>
 </html>
