--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     HELLO Marcy
   </h3>
   <p>
-    this is edited in "minor" branch
+    this is edited in "minor" branch, and edited again in "conflict" branch.
   </p>
 </body>
 </html>
